SEO Implementation: 2026 Policy (Meta, Schema, FAQ)

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PixelScaleAI - 4K Görsel Yükseltme</title>
+  <title>PixelScaleAI - 4K AI Fotoğraf Netleştirme ve Yükseltme</title>
   <!-- AI Libraries (Local) to avoid CORS/CDN issues -->
   <script src="/js/tf.min.js"></script>
   <script src="/js/upscaler.min.js"></script>
   <meta name="description"
-    content="PixelScaleAI ile fotoğraflarınızı saniyeler içinde 4K/8K kalitesine yükseltin. Yapay zeka destekli netleştirme ve iyileştirme aracı." />
+    content="Bulanık fotoğraflarınızı yapay zeka ile 4K/8K kalitesine yükseltin. PixelScaleAI ile saniyeler içinde net, canlı ve profesyonel görseller elde edin." />
+  <link rel="canonical" href="https://pixelscaleai.com/" />
+  <meta name="keywords" content="ai upscaler, fotoğraf netleştirme, görsel yükseltme, 4k yapma, pixelscaleai" />
   <meta name="theme-color" content="#581c87" />
 
   <!-- Open Graph / Facebook -->
@@ -17,7 +19,7 @@
   <meta property="og:url" content="https://pixelscaleai.com/" />
   <meta property="og:title" content="PixelScaleAI - 4K Görüntü İyileştirme" />
   <meta property="og:description"
-    content="Bulanık fotoğraflara veda edin. Yapay zeka ile tek tıkla 4 kat daha net ve büyük görseller elde edin." />
+    content="Bulanık fotoğraflarınızı yapay zeka ile 4K/8K kalitesine yükseltin. PixelScaleAI ile saniyeler içinde net, canlı ve profesyonel görseller elde edin." />
   <meta property="og:image" content="/icon.svg" />
 
   <!-- Twitter -->
@@ -25,7 +27,7 @@
   <meta property="twitter:url" content="https://pixelscaleai.com/" />
   <meta property="twitter:title" content="PixelScaleAI - 4K Görüntü İyileştirme" />
   <meta property="twitter:description"
-    content="Bulanık fotoğraflara veda edin. Yapay zeka ile tek tıkla 4 kat daha net ve büyük görseller elde edin." />
+    content="Bulanık fotoğraflarınızı yapay zeka ile 4K/8K kalitesine yükseltin. PixelScaleAI ile saniyeler içinde net, canlı ve profesyonel görseller elde edin." />
   <meta property="twitter:image" content="/icon.svg" />
 
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
